--- a/timetrackersite/timetrackerapp/templates/base.html
+++ b/timetrackersite/timetrackerapp/templates/base.html
@@ -7,7 +7,10 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 </head>
 <body>
-    {% block content %}{% endblock %}
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
+
 
 
 
