--- a/timetrackersite/timetrackerapp/templates/registration/login.html
+++ b/timetrackersite/timetrackerapp/templates/registration/login.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load bootstrap3 %}
 
 {% block title %}{% trans "Log in" %}{% endblock %}
 
 {% block content %}
-<form method="post" action="">
+<form method="post" action="" style="text-align: center; margin-top: 100px">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="{% trans 'Log in' %}" />
-    <input type="hidden" name="next" value="{{ next }}" />
+{#    {{ form.as_p }}#}
+
+    <div class="col-xs-4"></div>
+    <div class="col-xs-4">
+        {%  bootstrap_form form %}
+        <input type="submit" class="form-control btn-success" value="{% trans 'Log in' %}" />
+        <input type="hidden" class="form-control " name="next" value="{{ next }}" />
+    </div>
 </form>
 
 {% endblock %}
