--- a/timetrackersite/timetrackerapp/templates/timetrackerapp/main-page.html
+++ b/timetrackersite/timetrackerapp/templates/timetrackerapp/main-page.html
@@ -8,22 +8,63 @@
     {% else %}
         niekierownik
     {% endif %}
+    <div class="row" style="text-align: center">
+        <div class="col-xs-3">
+            <button id="start-work-day" type="button" class="btn btn-info btn-lg">
+                PRZYJŚCIE DO PRACY
+            </button>
+        </div>
+        <div class="col-xs-3">
+            <button id="start-break" type="button" class="btn btn-success btn-lg">
+                PRZERWA START
+            </button>
+        </div>
+        <div class="col-xs-3">
+            <button id="end-break" type="button" class="btn btn-warning btn-lg">
+                KONIEC PRZERWY
+            </button>
+        </div>
+        <div class="col-xs-3">
+            <button id="end-work-day" type="button" class="btn btn-danger btn-lg">
+                KONIEC PRACY
+            </button>
+        </div>
+    </div>
+    <div class="row" style="text-align: center">
+        <div class="col-xs-3 pull-right">
+            <a href="/accounts/logout">
+                <button class="btn btn-default" style="background-color: black; color: white">WYLOGUJ</button>
+            </a>
+        </div>
+    </div>
     <div class="row">
-        <button id="start-work-day" type="button" class="btn btn-info btn-lg">
-            PRZYJŚCIE DO PRACY
-        </button>
-
-        <button id="start-break" type="button" class="btn btn-success btn-lg">
-            PRZERWA START
-        </button>
-
-        <button id="end-break" type="button" class="btn btn-warning btn-lg">
-            KONIEC PRZERWY
-        </button>
-
-        <button id="end-work-day" type="button" class="btn btn-danger btn-lg">
-            KONIEC PRACY
-        </button>
+        <div class="col-xs-12">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Czas przyjścia</th>
+                        <th>Start przerwy</th>
+                        <th>Koniec przerwy</th>
+                        <th>Czas wyjścia</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for poj_log in log_dnia %}
+                    <tr>
+                        <td>{{ poj_log.czas_przyjscia }}</td>
+                        <td>{{ poj_log.laczny_czas_pracy }}</td>
+                        <td></td>
+                        <td>{{ poj_log.czas_wyjscia }}</td>
+                    </tr>
+                    {% empty %}
+                        <tr>
+                            <td colspan="4">Dzisiaj nie ma żadnego logu pracy</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {{ log_dnia }}
+        </div>
     </div>
 
 <script type="text/javascript">
@@ -34,21 +75,24 @@
               alert(response);
             });
         });
-    });
 
-    $(document).ready(function() {
         $('#start-break').click(function(){
             console.log("dziala");
             var jqxhr = $.get("/timetrackerapp/start-break/", function(response) {
               alert(response);
             });
         });
-    });
 
-    $(document).ready(function() {
         $('#end-break').click(function(){
             console.log("dziala");
             var jqxhr = $.get("/timetrackerapp/end-break/", function(response) {
+              alert(response);
+            });
+        });
+
+        $('#end-work-day').click(function(){
+            console.log("dziala");
+            var jqxhr = $.get("/timetrackerapp/end-work/", function(response) {
               alert(response);
             });
         });
