--- a/timetrackersite/timetrackerapp/templates/base.html
+++ b/timetrackersite/timetrackerapp/templates/base.html
@@ -5,13 +5,12 @@
     <title>base</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
-
-
+<div class="container">
+    {% block content %}{% endblock %}
+</div>
 
 
 </body>
