--- a/timetrackersite/timetrackerapp/templates/timetrackerapp/main-page.html
+++ b/timetrackersite/timetrackerapp/templates/timetrackerapp/main-page.html
@@ -1,31 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
-    TEMPLATE
+    <h3>{{ user.first_name }} {{ user.last_name }}</h3>
+    <h4>stanowisko: {{ user.pracownik.stanowisko }}</h4>
+    <h4>status: {{ user.pracownik.status }}</h4>
 
-    {% if user.pracownik.is_kierownik %}
-        kierownik
-    {% else %}
-        niekierownik
-    {% endif %}
     <div class="row" style="text-align: center">
         <div class="col-xs-3">
-            <button id="start-work-day" type="button" class="btn btn-info btn-lg">
+            <button id="start-work-day" type="button" class="btn btn-info btn-lg" onClick="refreshPage()">
                 PRZYJŚCIE DO PRACY
             </button>
         </div>
         <div class="col-xs-3">
-            <button id="start-break" type="button" class="btn btn-success btn-lg">
+            <button id="start-break" type="button" class="btn btn-success btn-lg" onClick="refreshPage()">
                 PRZERWA START
             </button>
         </div>
         <div class="col-xs-3">
-            <button id="end-break" type="button" class="btn btn-warning btn-lg">
+            <button id="end-break" type="button" class="btn btn-warning btn-lg" onClick="refreshPage()">
                 KONIEC PRZERWY
             </button>
         </div>
         <div class="col-xs-3">
-            <button id="end-work-day" type="button" class="btn btn-danger btn-lg">
+            <button id="end-work-day" type="button" class="btn btn-danger btn-lg" onClick="refreshPage()">
                 KONIEC PRACY
             </button>
         </div>
@@ -41,63 +38,118 @@
         <div class="col-xs-12">
             <table class="table table-hover">
                 <thead>
-                    <tr>
-                        <th>Czas przyjścia</th>
-                        <th>Start przerwy</th>
-                        <th>Koniec przerwy</th>
-                        <th>Czas wyjścia</th>
-                    </tr>
+                <tr>
+                    <th>Czas przyjścia</th>
+                    <th>Czas wyjścia</th>
+                    <th>Łączna długość przerw</th>
+                    <th>Łączna długość pracy (bez przerw)</th>
+                    <th>Łączny czas pracy (wliczając przerwy)</th>
+                </tr>
                 </thead>
                 <tbody>
-                    {% for poj_log in log_dnia %}
-                    <tr>
-                        <td>{{ poj_log.czas_przyjscia }}</td>
-                        <td>{{ poj_log.laczny_czas_pracy }}</td>
-                        <td></td>
-                        <td>{{ poj_log.czas_wyjscia }}</td>
-                    </tr>
-                    {% empty %}
-                        <tr>
-                            <td colspan="4">Dzisiaj nie ma żadnego logu pracy</td>
-                        </tr>
+                <tr>
+                    <td>{{ log_dnia.dzien.0.czas_przyjscia }}</td>
+                    <td>{% for logdn in log_dnia.dzien %}
+                        {% if forloop.last %}
+                            {{ logdn.czas_wyjscia  | default_if_none:"Jeszcze nie wyszedłeś" }}
+                        {% endif %}
                     {% endfor %}
+                    <td>{{ user.pracownik.laczny_czas_przerw | default_if_none:"Nie masz jeszcze żadnej zakończonej przerwy" }}</td>
+                    <td>{{ user.pracownik.czas_pracy_bez_przerw }}</td>
+                    <td>{{ user.pracownik.laczny_czas_pracy }}</td>
+                </tr>
                 </tbody>
             </table>
-            {{ log_dnia }}
         </div>
     </div>
+    <hr>
+    <div class="row">
+        <div class="col-xs-4"></div>
+        {# empty #}
+        {% if user.pracownik.is_kierownik %}
+            <div class="col-xs-4" style="text-align: center;">
+                <h3>panel kierownika</h3>
+                <h4>podwładni:</h4>
+            </div>
+            <div class="col-xs-12">
+                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                    {%  for pracownik in user.pracownik.lista_pracownikow %}
+                    <div class="panel panel-default">
+                        <div class="panel-heading" role="tab" id="heading{{pracownik.user.first_name}}">
+                            <h4 class="panel-title">
+                                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{pracownik.user.first_name}}"
+                                   aria-expanded="true" aria-controls="collapse{{pracownik.user.first_name}}">
+                                    {{pracownik.user.first_name}}
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse{{pracownik.user.first_name}}" class="panel-collapse collapse in" role="tabpanel"
+                             aria-labelledby="heading{{pracownik.user.first_name}}">
+                            <div class="panel-body">
+                                <table class="table table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Data</th>
+                                        <th>Łączny czas pracy</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% else %}
+            <div class="col-xs-4"><h3>panel użytkownika</h3></div>
+            <div class="col-xs-12">
 
-<script type="text/javascript">
-    $(document).ready(function() {
-        $('#start-work-day').click(function(){
-        console.log("dziala");
-            var jqxhr = $.get("/timetrackerapp/start-work/", function(response) {
-              alert(response);
+            </div>
+        {% endif %}
+    </div>
+
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#start-work-day').click(function () {
+                console.log("dziala");
+                var jqxhr = $.get("/timetrackerapp/start-work/", function (response) {
+                    alert(response);
+                });
+            });
+
+            $('#start-break').click(function () {
+                console.log("dziala");
+                var jqxhr = $.get("/timetrackerapp/start-break/", function (response) {
+                    alert(response);
+                });
+            });
+
+            $('#end-break').click(function () {
+                console.log("dziala");
+                var jqxhr = $.get("/timetrackerapp/end-break/", function (response) {
+                    alert(response);
+                });
+            });
+
+            $('#end-work-day').click(function () {
+                console.log("dziala");
+                var jqxhr = $.get("/timetrackerapp/end-work/", function (response) {
+                    alert(response);
+                });
             });
         });
 
-        $('#start-break').click(function(){
-            console.log("dziala");
-            var jqxhr = $.get("/timetrackerapp/start-break/", function(response) {
-              alert(response);
-            });
-        });
+        function refreshPage() {
+            window.location.reload();
+        }
 
-        $('#end-break').click(function(){
-            console.log("dziala");
-            var jqxhr = $.get("/timetrackerapp/end-break/", function(response) {
-              alert(response);
-            });
-        });
-
-        $('#end-work-day').click(function(){
-            console.log("dziala");
-            var jqxhr = $.get("/timetrackerapp/end-work/", function(response) {
-              alert(response);
-            });
-        });
-    });
-
-</script>
+    </script>
 
 {% endblock %}
