--- a/timetrackersite/timetrackerapp/templates/base.html
+++ b/timetrackersite/timetrackerapp/templates/base.html
@@ -7,8 +7,40 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="padding-top: 60px;">
 <div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    {% if user.is_authenticated %}
+                        <li class="active"><a href="#">TIMETRACKERAPP</a></li>
+                    {% endif %}
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                        <li><p class="text-muted" style="margin-top: 10px;"><i class="fa fa-fw fa-user"></i>
+                            <b>{{ user.username }}</b> |
+                            {{ user.first_name }} {{ user.last_name }} |
+                            stanowisko: {{ user.pracownik.stanowisko }} |
+                            status: <b>{{ user.pracownik.status }}</b> |
+                            <a href="{% url 'logout' %}">wyloguj</a></p></li>
+                    {% endif %}
+                </ul>
+
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
     {% block content %}{% endblock %}
 </div>
 
