--- a/timetrackersite/timetrackerapp/templates/timetrackerapp/month_log.html
+++ b/timetrackersite/timetrackerapp/templates/timetrackerapp/month_log.html
@@ -1,9 +1,9 @@
-<div class="panel-body">
+<div>
     <table class="table table-hover">
-        <thead>
+        <thead >
         <tr>
-            <th>Data</th>
-            <th>Łączny czas pracy</th>
+            <th><i class="fa-fw fa fa-calendar" aria-hidden="true"></i> Data</th>
+            <th><i class="fa-fw fa fa-clock-o" aria-hidden="true"></i> Łączny czas pracy</th>
         </tr>
         </thead>
         <tbody>
