--- a/timetrackersite/timetrackerapp/templates/timetrackerapp/main-page.html
+++ b/timetrackersite/timetrackerapp/templates/timetrackerapp/main-page.html
@@ -53,54 +53,70 @@
     </div>
     <hr>
     <div class="row">
-        <div class="col-xs-4"></div>
-        {# empty #}
-        <div class="col-xs-4" style="text-align: center;">
-            <h3>panel użytkownika</h3>
-        </div>
-
+        {# PANEL UŻYTKOWNIKA #}
         <div class="col-xs-12">
-            {% get_month_log user.pracownik %}
-        </div>
-
-        {% if user.pracownik.is_kierownik %}
-            <div class="col-xs-4"></div>
-            {# empty #}
-            <div class="col-xs-4" style="text-align: center;">
-                <h3>panel kierownika</h3>
-                <h4>podwładni:</h4>
-            </div>
-            <div class="col-xs-12">
-                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                    {% for pracownik in user.pracownik.lista_pracownikow %}
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="heading{{ pracownik.user.id }}">
-                                <h4 class="panel-title">
-                                    <div class="row">
-                                        <a class="collapsed" role="button" data-toggle="collapse"
-                                           data-parent="#accordion"
-                                           href="#collapse{{ pracownik.user.id }}"
-                                           aria-expanded="false"
-                                           aria-controls="collapse{{ pracownik.user.id }}">
-                                            <div class="col-xs-4">id: {{ pracownik.user.id }}</div>
-                                            <div class="col-xs-4">{{ pracownik.user.first_name }} {{ pracownik.user.last_name }}</div>
-                                            <div class="col-xs-4">stanowisko: {{ pracownik.stanowisko }}</div>
-                                        </a>
-                                    </div>
-                                </h4>
-                            </div>
-                            <div id="collapse{{ pracownik.user.id }}" class="panel-collapse collapse"
-                                 role="tabpanel"
-                                 aria-labelledby="heading{{ pracownik.user.id }}">
-                                {% get_month_log pracownik %}
+            <div class="row" >
+                <div class="col-xs-4"></div>
+                <div class="col-xs-4">
+                    <div class="row" style="background-color: #FFFFFF; border: 1px solid #ddd; border-radius: 4px; ">
+                        <div class="col-xs-12">
+                            <div style="text-align: center;"><h3>PANEL UŻYTKOWNIKA</h3></div>
+                            <div class="panel panel-default">
+                                <div class="panel-heading clearfix">
+                                    <h3 class="panel-title"><i class="fa-fw fa fa-table" aria-hidden="true"></i></i>
+                                        obecny miesiąc</h3>
+                                </div>
+                                {% get_month_log user.pracownik %}
                             </div>
                         </div>
-                    {% endfor %}
+                    </div>
                 </div>
             </div>
-        {% else %}
-            <hr>
-        {% endif %}
+        </div>
+
+        {# PANEL KIEROWNIKA #}
+        <div class="col-xs-12">
+            <div class="row"
+                 style="background-color: #FFFFFF; border: 1px solid #ddd; border-radius: 4px; margin-top: 20px;">
+                {% if user.pracownik.is_kierownik %}
+                    <div class="col-xs-4"></div>
+                    {# empty #}
+                    <div class="col-xs-4" style="text-align: center">
+                        <h3>PANEL KIEROWNIKA</h3>
+                        <h4>podwładni:</h4>
+                    </div>
+                    <div class="col-xs-12">
+                        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                            {% for pracownik in user.pracownik.lista_pracownikow %}
+                                <div class="panel panel-default">
+                                    <div class="panel-heading" role="tab" id="heading{{ pracownik.user.id }}">
+                                        <h4 class="panel-title">
+                                            <div class="row">
+                                                <a class="collapsed" role="button" data-toggle="collapse"
+                                                   data-parent="#accordion"
+                                                   href="#collapse{{ pracownik.user.id }}"
+                                                   aria-expanded="false"
+                                                   aria-controls="collapse{{ pracownik.user.id }}">
+                                                    <div class="col-xs-4">id: {{ pracownik.user.id }}</div>
+                                                    <div class="col-xs-4">{{ pracownik.user.first_name }} {{ pracownik.user.last_name }}</div>
+                                                    <div class="col-xs-4">stanowisko: {{ pracownik.stanowisko }}</div>
+                                                </a>
+                                            </div>
+                                        </h4>
+                                    </div>
+                                    <div id="collapse{{ pracownik.user.id }}" class="panel-collapse collapse"
+                                         role="tabpanel"
+                                         aria-labelledby="heading{{ pracownik.user.id }}">
+                                        {% get_month_log pracownik %}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% else %}
+                {% endif %}
+            </div>
+        </div>
     </div>
 
 
