--- a/timetrackersite/timetrackerapp/templates/timetrackerapp/main-page.html
+++ b/timetrackersite/timetrackerapp/templates/timetrackerapp/main-page.html
@@ -60,7 +60,9 @@
                 <div class="col-xs-4">
                     <div class="row" style="background-color: #FFFFFF; border: 1px solid #ddd; border-radius: 4px; ">
                         <div class="col-xs-12">
-                            <div style="text-align: center;"><h3>PANEL UŻYTKOWNIKA</h3></div>
+                            <div style="text-align: center;">
+                                <h3><i class="fa fa-fw fa-user" aria-hidden="true"></i>PANEL UŻYTKOWNIKA</h3>
+                            </div>
                             <div class="panel panel-default">
                                 <div class="panel-heading clearfix">
                                     <h3 class="panel-title"><i class="fa-fw fa fa-table" aria-hidden="true"></i></i>
@@ -82,7 +84,7 @@
                     <div class="col-xs-4"></div>
                     {# empty #}
                     <div class="col-xs-4" style="text-align: center">
-                        <h3>PANEL KIEROWNIKA</h3>
+                        <h3><i class="fa fa-fw fa-user-secret" aria-hidden="true"></i>PANEL KIEROWNIKA</h3>
                         <h4>podwładni:</h4>
                     </div>
                     <div class="col-xs-12">
