--- a/timetrackersite/timetrackerapp/templates/timetrackerapp/month_log.html
+++ b/timetrackersite/timetrackerapp/templates/timetrackerapp/month_log.html
@@ -3,6 +3,9 @@
         <thead >
         <tr>
             <th><i class="fa-fw fa fa-calendar" aria-hidden="true"></i> Data</th>
+            <th>|</th>
+            <th><i class="fa-fw fa fa-clock-o" aria-hidden="true"></i> Łączny czas przerw</th>
+            <th>|</th>
             <th><i class="fa-fw fa fa-clock-o" aria-hidden="true"></i> Łączny czas pracy</th>
         </tr>
         </thead>
@@ -10,7 +13,10 @@
         {% for log in month_log %}
             <tr>
                 <td>{{ log.0 }}</td>
+                <td>|</td>
                 <td>{{ log.1 }}</td>
+                <td>|</td>
+                <td>{{ log.2 }}</td>
             </tr>
         {% endfor %}
         </tbody>
