--- a/timetrackersite/timetrackerapp/templates/timetrackerapp/month_log.html
+++ b/timetrackersite/timetrackerapp/templates/timetrackerapp/month_log.html
@@ -1,6 +1,12 @@
+<div class="panel-heading clearfix">
+    <h3 class="panel-title">
+        <i class="fa-fw fa fa-table" aria-hidden="true"></i>
+        obecny miesiąc
+    </h3>
+</div>
 <div>
     <table class="table table-hover">
-        <thead >
+        <thead>
         <tr>
             <th><i class="fa-fw fa fa-calendar" aria-hidden="true"></i> Data</th>
             <th>|</th>
