--- a/timetrackersite/timetrackerapp/templates/timetrackerapp/month_log.html
+++ b/timetrackersite/timetrackerapp/templates/timetrackerapp/month_log.html
@@ -1,30 +1,57 @@
 <div class="panel-heading clearfix">
     <h3 class="panel-title">
+        <a href=""><i id="previous-month" class="fa-fw fa fa-long-arrow-left" aria-hidden="true"></i></a>
+        |
         <i class="fa-fw fa fa-table" aria-hidden="true"></i>
         obecny miesiąc
+        |
+        <a href=""><i id="next-month" class="fa-fw fa fa-long-arrow-right" aria-hidden="true"></i></a>
     </h3>
 </div>
-<div>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th><i class="fa-fw fa fa-calendar" aria-hidden="true"></i> Data</th>
-            <th>|</th>
-            <th><i class="fa-fw fa fa-clock-o" aria-hidden="true"></i> Łączny czas przerw</th>
-            <th>|</th>
-            <th><i class="fa-fw fa fa-clock-o" aria-hidden="true"></i> Łączny czas pracy</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for log in month_log %}
-            <tr>
-                <td>{{ log.0 }}</td>
-                <td>|</td>
-                <td>{{ log.1 }}</td>
-                <td>|</td>
-                <td>{{ log.2 }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<div id="tabelka">
+{#    <table class="table table-hover">#}
+{#        <thead>#}
+{#        <tr>#}
+{#            <th><i class="fa-fw fa fa-calendar" aria-hidden="true"></i> Data</th>#}
+{#            <th>|</th>#}
+{#            <th><i class="fa-fw fa fa-clock-o" aria-hidden="true"></i> Łączny czas przerw</th>#}
+{#            <th>|</th>#}
+{#            <th><i class="fa-fw fa fa-clock-o" aria-hidden="true"></i> Łączny czas pracy</th>#}
+{#        </tr>#}
+{#        </thead>#}
+{#        <tbody>#}
+{#        {% for log in month_log %}#}
+{#            <tr>#}
+{#                <td>{{ log.0 }}</td>#}
+{#                <td>|</td>#}
+{#                <td>{{ log.1 }}</td>#}
+{#                <td>|</td>#}
+{#                <td>{{ log.2 }}</td>#}
+{#            </tr>#}
+{#        {% endfor %}#}
+{#        </tbody>#}
+{#    </table>#}
 </div>
+
+<script type="text/javascript">
+    var miesiac = 4;
+    var rok = 2016;
+    var id_prac = 2;
+
+    var refresh = function (id_prac, rok, miesiac) {
+        $('#tabelka').load('/timetrackerapp/log/'+ id_prac + '/'+ rok + '/' + miesiac);
+        console.log(miesiac);
+    };
+    refresh(2, 2016, 4);
+
+    var previousMonth = function () {
+        var month = 3;
+        refresh();
+    };
+
+    $('#previous-month').click(function () {
+        previousMonth();
+    });
+
+</script>
+
