--- a/timetrackersite/timetrackerapp/templates/base.html
+++ b/timetrackersite/timetrackerapp/templates/base.html
@@ -5,10 +5,12 @@
     <title>TIMETRACKERAPP</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,cyrillic,latin-ext'
+          rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
-<body style="padding-top: 60px; background-color: rgb(250, 250, 230)">
+<body style="font-family: 'Roboto', sans-serif; padding-top: 60px; background-color: rgb(250, 250, 230)">
 <div class="container">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
