--- a/timetrackersite/timetrackerapp/templates/registration/login.html
+++ b/timetrackersite/timetrackerapp/templates/registration/login.html
@@ -9,6 +9,17 @@
         {% csrf_token %}
         {#    {{ form.as_p }}#}
 
+
+        </div>
+        <div class="col-xs-2"></div>
+        <div class="col-xs-8" style="text-align: center; margin-bottom: 40px;">
+            <h1><b>TIMETRACKERAPP</b></h1>
+            <br>
+            <h2>Witaj w systemie rejestracji czasu pracy dla Twojej firmy.</h2>
+            <h3>Zaloguj się używając swojej nazwy użytkownika oraz hasła, <br>które otrzymałeś na adres e-mail.</h3>
+            <br>
+        </div>
+        <br>
         <div class="col-xs-4"></div>
         <div class="col-xs-4">
             {% bootstrap_form form %}
